revenue-attribution/main/default/objects/SBQQ__QuoteLine__c/fields/Churn_Total__c.field-meta.xml
<CustomField>
    <fullName>Churn_Total__c</fullName>
    <label>Churn Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>