revenue-attribution/main/default/objects/SBQQ__QuoteLine__c/fields/Expansion_ARR__c.field-meta.xml
<CustomField>
    <fullName>Expansion_ARR__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__SubscriptionPricing__c,&quot;Fixed Price&quot;) || ISPICKVAL(SBQQ__SubscriptionPricing__c,&quot;Percent of Total&quot;), 
(Expansion_Total__c/ (IF( SBQQ__DefaultSubscriptionTerm__c &lt;&gt; 12,( SBQQ__ProrateMultiplier__c /12), SBQQ__ProrateMultiplier__c))) ,0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expansion ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>