revenue-attribution/main/default/objects/SBQQ__QuoteLine__c/fields/Expansion_Total__c.field-meta.xml
<CustomField>
    <fullName>Expansion_Total__c</fullName>
    <label>Expansion Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>