revenue-attribution/main/default/objects/SBQQ__QuoteLine__c/fields/Net_New_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_New_Total__c</fullName>
    <label>Net New Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>