revenue-attribution/main/default/objects/SBQQ__QuoteLine__c/fields/Renewal_Total__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Total__c</fullName>
    <label>Renewal Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>